--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 
     <head>
         <meta charset="UTF=8">
-        <link rel="stylesheet" href= "assets/css/style.css">
-        <title>Contact info</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/style.css">
+                <title>Contact info</title>
 
     </head>
 
