--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
     <head>
        <meta charset="UTF-8">
-       <link rel="stylesheet" href= "assets/css/style.css">
+       <meta name="viewport" content="width=device-width, initial-scale=1">
+       <link rel="stylesheet" href="css/style.css">
     
        <title>
            Valerie Sakamura's website
